--- a/src/config/APGD.yaml
+++ b/src/config/APGD.yaml
@@ -1,9 +1,11 @@
-attacker: LazyGreedy
+attacker: APGD
 
 n_examples: 110
 norm: Linf
 epsilon: 0.03137254901960784
-iteration: 20
+step_size: 0.06274509803921569
+rho: 0.75
+iteration: 100
 
 criterion:
     #
@@ -12,11 +14,9 @@ criterion:
     # dlr
 dataset:
     #
-    # cifar10
+    cifar10
     # cifar100
-    imagenet
+    # imagenet
 model:
     # model_name: batch_size
-    # Carmon2019Unlabeled: 2000
-    # Ding2020MMA: 1000
-    Salman2020Do_R18: 20
+    Carmon2019Unlabeled: 200
