--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@
 git+https://github.com/RobustBench/robustbench.git
 --find-links https://download.pytorch.org/whl/cu116/torch_stable.html
 torch
-torchvision
+
+# addon
+optuna
 
 # utils
 tqdm
