--- a/src/config/base/HALS.yaml
+++ b/src/config/base/HALS.yaml
@@ -1,9 +1,11 @@
-attacker: LazyGreedy
+attacker: HALS
 
 n_examples: 110
 norm: Linf
 epsilon: 0.03137254901960784
-iteration: 20
+iteration: 10
+
+initial_split: 4
 
 criterion:
     #
@@ -12,11 +14,11 @@ criterion:
     # dlr
 dataset:
     #
-    # cifar10
+    cifar10
     # cifar100
-    imagenet
+    # imagenet
 model:
     # model_name: batch_size
-    # Carmon2019Unlabeled: 2000
+    Carmon2019Unlabeled: 20
     # Ding2020MMA: 1000
-    Salman2020Do_R18: 20
+    # Salman2020Do_R18: 20
