--- a/src/config/base/HALS.yaml
+++ b/src/config/base/HALS.yaml
@@ -3,8 +3,8 @@ attacker: HALS
 n_examples: 110
 norm: Linf
 epsilon: 0.03137254901960784
+max_iter: 1
 iteration: 10
-num_search: 10
 
 initial_split: 4
 
