--- a/src/config/base/APGD.yaml
+++ b/src/config/base/APGD.yaml
@@ -1,23 +1,14 @@
 attacker: APGD
 
-n_examples: 110
+n_examples: 100
 norm: Linf
 epsilon: 0.03137254901960784
 iteration: 100
-
 step_size: 0.06274509803921569
 rho: 0.75
 
-criterion:
-    #
-    # ce
-    cw
-    # dlr
-dataset:
-    #
-    cifar10
-    # cifar100
-    # imagenet
+criterion: cw
+dataset: cifar10
 model:
-    # model_name: batch_size
-    Carmon2019Unlabeled: 200
+    robustbench:
+        Carmon2019Unlabeled: 200
