--- a/src/config/default/APGD.yaml
+++ b/src/config/default/APGD.yaml
@@ -6,6 +6,7 @@ epsilon: 0.03137254901960784
 iteration: 100
 step_size: 0.06274509803921569
 rho: 0.75
+alpha: 0.75
 
 criterion: cw
 dataset: cifar10
