--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 git+https://github.com/RobustBench/robustbench.git
 --find-links https://download.pytorch.org/whl/cu116/torch_stable.html
 torch
+foolbox
 
 # addon
 optuna
