--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ git+https://github.com/RobustBench/robustbench.git
 --find-links https://download.pytorch.org/whl/cu116/torch_stable.html
 torch
 foolbox
+adversarial-robustness-toolbox
 optuna
 
 # utils
@@ -9,6 +10,7 @@ tqdm
 halo
 colorlog
 pyyaml
+ipython
 numpy
 matplotlib
 GitPython
