--- a/src/config/default/FGSM.yaml
+++ b/src/config/default/FGSM.yaml
@@ -1,11 +1,13 @@
 attacker: FGSM
 
-n_examples: 100
+n_examples: 10000
 norm: Linf
 epsilon: 0.03137254901960784
+
+iteration: 10
 
 criterion: cw
 dataset: cifar10
 model:
     robustbench:
-        Carmon2019Unlabeled: 100
+        Carmon2019Unlabeled: 10000
