--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 git+https://github.com/RobustBench/robustbench.git
 --find-links https://download.pytorch.org/whl/cu116/torch_stable.html
 torch
+optuna
+
+# attacker
 foolbox
 adversarial-robustness-toolbox
-optuna
+advertorch
+
 
 # utils
 tqdm
