--- a/config/default/GenAttack.yaml
+++ b/config/default/GenAttack.yaml
@@ -1,9 +1,9 @@
 attacker: GenAttack
 
-n_examples: 100
+n_examples: 482
 norm: Linf
 epsilon: 0.03137254901960784
-iteration: 60
+iteration: 3000
 rho: 0.5
 rho_min: 0.1
 alpha: 1.0
@@ -12,7 +12,7 @@ population: 4
 temperature: 0.3
 
 criterion: fitness
-dataset: cifar10
+dataset: cifar10_hard
 model:
     robustbench:
-        Carmon2019Unlabeled: 100
+        Carmon2019Unlabeled: 482
