--- a/config/default/SquareAttack2.yaml
+++ b/config/default/SquareAttack2.yaml
@@ -1,14 +1,14 @@
 attacker: SquareAttack2
 
-n_examples: 100
+n_examples: 2235
 norm: Linf
 epsilon: 0.03137254901960784
-iteration: 100
+iteration: 1000
 p_init: 0.8
-nb_restarts: 2
+nb_restarts: 1
 
 criterion: cw
-dataset: cifar10
+dataset: cifar10_easy
 model:
     robustbench:
-        Carmon2019Unlabeled: 100
+        Carmon2019Unlabeled: 2235
