--- a/config/default/TransferHALS.yaml
+++ b/config/default/TransferHALS.yaml
@@ -1,13 +1,18 @@
 attacker: TransferHALS
 
-n_examples: 100
+n_examples: 2235
 norm: Linf
 epsilon: 0.03137254901960784
 max_iter: 1
 iteration: 5
 
+transfer:
+    model_container: robustbench
+    model: Zhang2019Theoretically
+    batch_size: 2235
+
 criterion: cw
-dataset: cifar10
+dataset: cifar10_easy
 model:
     robustbench:
-        Carmon2019Unlabeled: 1000
+        Carmon2019Unlabeled: 2235
