--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 git+https://github.com/RobustBench/robustbench.git
 --find-links https://download.pytorch.org/whl/cu116/torch_stable.html
 torch
+torchvision
 
 # attacker
 foolbox
