--- a/config/default/gen_attack.yaml
+++ b/config/default/gen_attack.yaml
@@ -1,13 +1,14 @@
-attacker: GenAttack
+attacker: FoolboxGenAttacker
 
 epsilon: 0.03137254901960784
+norm: Linf
 dataset: cifar10_easy
 model:
     robustbench:
         Carmon2019Unlabeled: 2235
 
 # hyperparameter
-steps: 1000
+steps: 30
 population: 10
 mutation_probability: 0.10
 mutation_range: 0.15
