--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# model
 git+https://github.com/RobustBench/robustbench.git
 --find-links https://download.pytorch.org/whl/cu116/torch_stable.html
 torch
