--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ torchvision
 # attacker
 foolbox
 adversarial-robustness-toolbox
+git+https://github.com/BorealisAI/advertorch.git
 
 # utils
 yaspin
