--- a/config/default/tabu_attack.yaml
+++ b/config/default/tabu_attack.yaml
@@ -9,7 +9,10 @@ model:
 
 # hyperparameter
 criterion: cw
-forward: 100
-tabu_size: 20
+forward: 10
+strategy: best-fit
+tabu_size: 7
 neighbor_search: 3
-N_flip: 100
+N_flip:
+    - 600
+    - 200
