--- a/config/default/tabu_attack.yaml
+++ b/config/default/tabu_attack.yaml
@@ -9,9 +9,9 @@ model:
 
 # hyperparameter
 criterion: cw
-forward: 100
-strategy: best-fit
+forward: 1000
+strategy: fast-fit
 tabu_size: 7
-neighbor_search: 3
+neighbor_search: 10
 p_init: 0.8
 clear_tabu: 4
