--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ torchvision
 foolbox
 adversarial-robustness-toolbox
 git+https://github.com/BorealisAI/advertorch.git
+opencv-contrib-python
 
 # utils
 yaspin
