--- a/config/proposed_method.yaml
+++ b/config/proposed_method.yaml
@@ -10,3 +10,10 @@ model:
 
 # hyperparameter
 forward: 100
+criterion: cw
+# ---superpixel---
+region_size: 20
+ruler: 30.0
+min_element_size: 20
+num_iterations: 4
+# -----------------
