--- a/config/proposed_method.yaml
+++ b/config/proposed_method.yaml
@@ -3,18 +3,21 @@ attacker: ProposedMethod
 norm: Linf
 epsilon: 0.01568627450980392
 dataset: imagenet
+n_examples: 5000
 
 model:
     robustbench:
         Salman2020Do_R18: 5000
 
 # hyperparameter
-forward: 100
+step: 100
 criterion: cw
 p_init: 0.8
 
 # superpixel hyperparameter
-region_size: 100
-ruler: 30.0
-min_element_size: 20
-num_iterations: 4
+segments:
+    - 4
+    - 16
+    - 64
+    - 256
+    - 512
