--- a/config/proposed_method.yaml
+++ b/config/proposed_method.yaml
@@ -1,7 +1,7 @@
 attacker: ProposedMethod
 
 norm: Linf
-epsilon: 0.01568627450980392
+epsilon: 1
 dataset: imagenet
 n_examples: 5000
 
@@ -13,11 +13,4 @@ model:
 step: 100
 criterion: cw
 p_init: 0.8
-
-# superpixel hyperparameter
-segments:
-    - 4
-    - 16
-    - 64
-    - 256
-    - 512
+segments: [4, 16, 64, 256, 512]
