--- a/config/gen_attack.yaml
+++ b/config/gen_attack.yaml
@@ -7,11 +7,15 @@ n_examples: 5000
 
 model:
     robustbench:
+        Wong2020Fast: 1000
+        Engstrom2019Robustness: 1000
         Salman2020Do_R18: 100
+        Salman2020Do_R50: 1000
+        Salman2020Do_50_2: 1000
 
 # hyperparameter
 population: 10
-steps: 100
+steps: 10
 tau: 0.1
 alpha_init: 0.4
 rho_init: 0.5
