--- a/config/proposed_plus_boundary.yaml
+++ b/config/proposed_plus_boundary.yaml
@@ -7,9 +7,9 @@ n_examples: 5000
 
 model:
     robustbench:
-        Salman2020Do_R18: 1000
+        Salman2020Do_R18: 2500
 
 # hyperparameter
 steps: 100
 criterion: cw
-segments: [4, 16, 64, 256, 1024]
+segments: [4, 16, 64]
