--- a/config/saliency_attack.yaml
+++ b/config/saliency_attack.yaml
@@ -11,6 +11,7 @@ model:
 
 # hyperparameter
 saliency_weight: ../storage/model/saliency/saliency_weight.pth
+saliency_batch_size: 1000
 steps: 100
 criterion: cw
 initial_split: 16
