--- a/config/saliency_attack.yaml
+++ b/config/saliency_attack.yaml
@@ -1,7 +1,7 @@
 attacker: SaliencyAttack
 
 norm: Linf
-epsilon: 0.01568627450980392
+epsilon: 1
 dataset: imagenet
 n_examples: 5000
 
@@ -11,8 +11,7 @@ model:
 
 # hyperparameter
 saliency_weight: ../storage/model/saliency/saliency_weight.pth
-saliency_batch_size: 10
 steps: 100
 criterion: cw
-initial_split: 16
+k_init: 32
 
