--- a/config/saliency_attack.yaml
+++ b/config/saliency_attack.yaml
@@ -7,7 +7,11 @@ n_examples: 5000
 
 model:
     robustbench:
+        Wong2020Fast: 1000
+        Engstrom2019Robustness: 1000
         Salman2020Do_R18: 1000
+        Salman2020Do_R50: 1000
+        Salman2020Do_50_2: 1000
 
 # hyperparameter
 saliency_weight: ../storage/model/saliency/saliency_weight.pth
