--- a/config/plus_boundary.yaml
+++ b/config/plus_boundary.yaml
@@ -1,4 +1,4 @@
-attacker: TabuSearchProposedMethod
+attacker: BoundaryPlus
 
 norm: Linf
 epsilon: 0.01568627450980392
@@ -12,6 +12,4 @@ model:
 # hyperparameter
 steps: 100
 criterion: cw
-segments: [4, 16, 64, 256]
-checkpoint: 3
-tabu_size: 20
+segments: [4, 16, 64]
