--- a/config/tabu_search.yaml
+++ b/config/tabu_search.yaml
@@ -1,4 +1,4 @@
-attacker: BoundaryProposedMethod
+attacker: TabuSearch
 
 norm: Linf
 epsilon: 0.01568627450980392
@@ -12,4 +12,6 @@ model:
 # hyperparameter
 steps: 100
 criterion: cw
-segments: [4, 16, 64]
+segments: [4, 16, 64, 256]
+checkpoint: 3
+tabu_size: 20
