--- a/config/advanced_local_search.yaml
+++ b/config/advanced_local_search.yaml
@@ -13,5 +13,7 @@ model:
 steps: 100
 criterion: cw
 segments: [4, 16, 64, 256]
-checkpoint: 4
+init_checkpoint: 4
+checkpoint: 1.3
 additional_search: random
+attention_pixel: best
