--- a/config/proposed_method.yaml
+++ b/config/proposed_method.yaml
@@ -1,4 +1,4 @@
-attacker: TabuSearch
+attacker: Proposed_method
 
 norm: Linf
 epsilon: 0.01568627450980392
@@ -7,14 +7,13 @@ n_examples: 5000
 
 model:
     robustbench:
+        Wong2020Fast: 2500
+        Engstrom2019Robustness: 2500
         Salman2020Do_R18: 2500
+        Salman2020Do_R50: 2500
+        Salman2020Do_50_2: 2500
 
 # hyperparameter
 steps: 100
 criterion: cw
 segments: [4, 16, 64, 256]
-init_checkpoint: 1.0
-checkpoint: 1.3
-attention_pixel: best
-ratio: 0.66
-tabu_size: 7
