--- a/config/parsimonious_attack.yaml
+++ b/config/parsimonious_attack.yaml
@@ -1,8 +1,7 @@
-attacker: HALS
+attacker: ParsimoniousAttack
 
 norm: Linf
 epsilon: 0.01568627450980392
-dataset: imagenet
 n_examples: 5000
 
 model:
