--- a/config/proposed_method.yaml
+++ b/config/proposed_method.yaml
@@ -1,8 +1,7 @@
-attacker: Proposed_method
+attacker: ProposedMethod
 
 norm: Linf
 epsilon: 0.01568627450980392
-dataset: imagenet
 n_examples: 5000
 
 model:
