--- a/config/square_attack.yaml
+++ b/config/square_attack.yaml
@@ -2,10 +2,12 @@ attacker: SquareAttack
 
 norm: Linf
 epsilon: 0.01568627450980392
-dataset: imagenet
 n_examples: 5000
 
 model:
+    torchvision:
+        resnet50: 1000
+
     robustbench:
         Wong2020Fast: 1000
         Engstrom2019Robustness: 1000
