--- a/config/gen_attack.yaml
+++ b/config/gen_attack.yaml
@@ -5,6 +5,10 @@ epsilon: 0.01568627450980392
 n_examples: 5000
 
 model:
+    torchvision:
+        inception_v3: 100
+        resnet50: 100
+
     robustbench:
         Wong2020Fast: 100
         Engstrom2019Robustness: 100
