--- a/config/proposed_method.yaml
+++ b/config/proposed_method.yaml
@@ -5,6 +5,10 @@ epsilon: 0.01568627450980392
 n_examples: 5000
 
 model:
+    torchvision:
+        inception_v3: 5000
+        resnet50: 5000
+
     robustbench:
         Wong2020Fast: 5000
         Engstrom2019Robustness: 5000
