--- a/config/parsimonious_attack.yaml
+++ b/config/parsimonious_attack.yaml
@@ -5,6 +5,10 @@ epsilon: 0.01568627450980392
 n_examples: 5000
 
 model:
+    torchvision:
+        inception_v3: 1000
+        resnet50: 1000
+
     robustbench:
         Wong2020Fast: 1000
         Engstrom2019Robustness: 1000
