--- a/config/parsimonious_attack.yaml
+++ b/config/parsimonious_attack.yaml
@@ -17,7 +17,7 @@ model:
         Salman2020Do_50_2: 1000
 
 # hyperparameter
-steps: 100
+step: 100
 criterion: ce
 initial_split: 32
 insert_and_deletion: 1
