--- a/config/saliency_attack.yaml
+++ b/config/saliency_attack.yaml
@@ -20,7 +20,7 @@ model:
 saliency_weight: ../storage/model/saliency/saliency_weight.pth
 saliency_batch: 100
 threshold: 0.1
-steps: 100
+step: 100
 criterion: cw
 k_init: 16
 
