--- a/config/proposed_method.yaml
+++ b/config/proposed_method.yaml
@@ -20,7 +20,7 @@ model:
 step: 100
 criterion: cw
 update_area: random_square
-search_channel_wise: True
+channel_wise: True
 initial_point: random
 update_method: uniform_distribution
 
