--- a/config/saliency_attack.yaml
+++ b/config/saliency_attack.yaml
@@ -5,16 +5,16 @@ epsilon: 0.01568627450980392
 n_examples: 5000
 
 model:
-    torchvision:
-        resnet50: 1000
-        vgg16_bn: 500
+    # torchvision
+    resnet50: 1000
+    vgg16_bn: 500
 
-    robustbench:
-        Wong2020Fast: 1000
-        Engstrom2019Robustness: 250
-        Salman2020Do_R18: 1000
-        Salman2020Do_R50: 1000
-        Salman2020Do_50_2: 1000
+    # robustbench
+    Wong2020Fast: 1000
+    Engstrom2019Robustness: 250
+    Salman2020Do_R18: 1000
+    Salman2020Do_R50: 1000
+    Salman2020Do_50_2: 1000
 
 # hyperparameter
 saliency_weight: ../storage/model/saliency/saliency_weight.pth
