--- a/config/proposed_method.yaml
+++ b/config/proposed_method.yaml
@@ -21,11 +21,12 @@ step: 100
 criterion: cw
 update_area: superpixel
 channel_wise: True
-initial_point: lower
+initial_point: stripes
 update_method: efficient_search
 
 # superpixel
 segments: [4, 16, 64, 256, 1024]
+shuffle: True
 
 # equally_divided_squares
 initial_split: 32
