--- a/config/proposed_method_exp.yaml
+++ b/config/proposed_method_exp.yaml
@@ -16,7 +16,7 @@ update_method: adaptive_search
 removal: True
 
 # superpixel
-segments: [4, 16, 64, 256, 1024]
+segments: [4, 16, 64, 256, 1024, 4096]
 
 # equally_divided_squares
 initial_split: 32
