--- a/config/proposed_method.yaml
+++ b/config/proposed_method.yaml
@@ -22,6 +22,7 @@ criterion: cw
 update_area: superpixel
 update_method: adaptive_search
 removal: True
+alpha: [1.0, 1.0, 0.8, 0.8, 0.8, 0.8, 0.8]
 
 # superpixel
 segments: [4, 16, 64, 256, 1024, 4096, 16384]
