--- a/config/proposed_method_exp.yaml
+++ b/config/proposed_method_exp.yaml
@@ -13,11 +13,9 @@ step: 100
 criterion: cw
 update_area: superpixel
 update_method: adaptive_search
-removal: False
-alpha: [1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0]
 
 # superpixel
-segments: [4, 16, 64, 256, 1024, 4096, 16384]
+segments: [4, 16, 64, 256, 1024, 4096]
 
 # equally_divided_squares
 initial_split: 32
